# SWOS_Competition_Changer

./: CMakeLists.txt  LICENSE  readme.md
data/: TEAM.028  swscc.xml
include/swosasi/: swosexe.h  swosgui.h  swoshook.h
include/swscc/: swscomp.h
src/swosasi/: swoshook.cc
src/swscc/: swscc.cc  swscomp.cc
src/winmm/: winmmmain.cc
